--- a/rxsocket/build.gradle
+++ b/rxsocket/build.gradle
@@ -1,18 +1,22 @@
-apply plugin: 'com.android.application'
-
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'com.github.dcendents.android-maven'
 
-apply plugin: 'kotlin-android-extensions'
-
+group = 'com.github.panos-stavrianos'
 android {
+
     compileSdkVersion 28
     defaultConfig {
-        applicationId "moe.codeest.rxsocketclientdemo"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+    }
+    testOptions {
+        unitTests.returnDefaultValues = true
     }
     buildTypes {
         release {
@@ -28,18 +32,16 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
+    implementation 'io.github.microutils:kotlin-logging:1.5.4'
+    implementation 'org.slf4j:slf4j-android:1.7.21'
+    implementation 'commons-codec:commons-codec:20041127.091804'
+    implementation 'com.google.guava:guava:25.1-jre'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    testImplementation "org.robolectric:robolectric:3.3.2"
-    def work_version = "1.0.0-alpha07"
-    implementation "android.arch.work:work-runtime-ktx:$work_version"
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
-
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(':rxsocket')
-}
 
+    testImplementation "org.powermock:powermock-module-junit4:1.7.4"
+    testImplementation "org.powermock:powermock-api-mockito2:1.7.4"
+}
