--- a/rxsocket/build.gradle
+++ b/rxsocket/build.gradle
@@ -16,8 +16,12 @@ android {
 
     }
     testOptions {
-        unitTests.returnDefaultValues = true
+         unitTests {
+            returnDefaultValues = true
+            includeAndroidResources = true
+        }
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -38,9 +42,12 @@ dependencies {
     implementation 'org.slf4j:slf4j-android:1.7.21'
     implementation 'commons-codec:commons-codec:20041127.091804'
     implementation 'com.google.guava:guava:25.1-jre'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    // (Required) Writing and executing Unit Tests on the JUnit Platform
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.2.0"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.2.0"
+
+    // (Optional) If you need "Parameterized Tests"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:5.2.0"
 
     testImplementation "org.powermock:powermock-module-junit4:1.7.4"
     testImplementation "org.powermock:powermock-api-mockito2:1.7.4"
